[tool.poetry]
name = "mlsys-nyu-2022"
version = "0.1.0"
description = ""
authors = ["jegesposo <jegesposo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
pydantic = "^2.9.2"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
